fix: add auto-hide scrollbars on scroll

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -102,6 +102,10 @@ body {
   }
 }
 
+*[data-scrollbar-scrolling='1'] {
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+}
+
 *::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -122,4 +126,8 @@ body {
   *:hover::-webkit-scrollbar-thumb {
     background-color: var(--scrollbar-thumb);
   }
+}
+
+*[data-scrollbar-scrolling='1']::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb);
 }
